--- a/index.html
+++ b/index.html
@@ -64,17 +64,12 @@
               </tr>
             </thead>
             <tbody class="new-row">
-              <tr class="cliente">
-                <td class="name">Mario Henrique Cezar</td>
-                <td class="cpf">111.111.111-11</td>
-                <td class="birthday">39</td>
-                <td class="income">R$ 3000,00</td>
-              </tr>
+            
             </tbody>
             <tfoot>
               <th colspan="3">Somatório</th>
 
-              <td class="total">R$</td>
+              <td class="total"></td>
             </tfoot>
           </table>
         </div>
