--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <script src="js/main.js" defer></script>
+    <script src="js/api.js" defer></script>
+    <script src="js/masks.js" defer></script>
     <title>Desafio</title>
   </head>
   <body>
@@ -34,7 +37,7 @@
                 </div>
                 <div class="input-box">
                   <label for="birthday"></label>
-                  <input type="date" id="birthday" name="nascimento" />
+                  <input type="date" id="birthday" name="nascimento" placeholder="Type Date"  onfocus="(this.type = 'date')"/>
                 </div>
                 <div class="input-box">
                   <label for="income"></label>
@@ -46,8 +49,13 @@
                   />
                 </div>
               </div>
-              <div class="submit">
-                <input class="form-button" type="submit" value="Enviar" />
+              <div class="buttons">
+                <div class="submit">
+                  <input class="form-button" type="submit" value="Enviar" />
+                </div>
+                <div class="submit">
+                  <input class="get-button" type="submit" value="Listar" />
+                </div>
               </div>
             </div>
           </form>
