--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="icon" href="" type="image/x-icon" />
     <script src="js/main.js" defer></script>
     <script src="js/api.js" defer></script>
     <script src="js/masks.js" defer></script>
@@ -37,7 +37,13 @@
                 </div>
                 <div class="input-box">
                   <label for="birthday"></label>
-                  <input type="date" id="birthday" name="nascimento" placeholder="Type Date"  onfocus="(this.type = 'date')"/>
+                  <input
+                    type="date"
+                    id="birthday"
+                    name="nascimento"
+                    placeholder="Type Date"
+                    onfocus="(this.type = 'date')"
+                  />
                 </div>
                 <div class="input-box">
                   <label for="income"></label>
@@ -71,9 +77,7 @@
                 <th>Renda</th>
               </tr>
             </thead>
-            <tbody class="new-row">
-            
-            </tbody>
+            <tbody class="new-row"></tbody>
             <tfoot>
               <th colspan="3">Somatório</th>
 
